Bump log4j@2.23.0, okhttp@5.0.0.alpha.12, maven plugins (#276)