@@ -59,20 +59,20 @@
 		<!-- utils -->
 		<commons-lang3.version>3.14.0</commons-lang3.version>
 		<commons-net.version>3.10.0</commons-net.version>
-		<log4j.version>2.22.0</log4j.version>
+		<log4j.version>2.23.0</log4j.version>
 
 		<!-- test -->
-		<okhttp.version>5.0.0-alpha.11</okhttp.version>
-		<junit.version>5.10.1</junit.version>
-		<junit-pioneer.version>2.0.1</junit-pioneer.version>
+		<okhttp.version>5.0.0-alpha.12</okhttp.version>
+		<junit.version>5.10.2</junit.version>
+		<junit-pioneer.version>2.2.0</junit-pioneer.version>
 
 		<!-- Plugins -->
-		<maven-compiler.version>3.11.0</maven-compiler.version>
-		<maven-source.version>3.2.0</maven-source.version>
-		<maven-surefire.version>3.0.0-M5</maven-surefire.version>
-		<maven-gpg.version>3.0.1</maven-gpg.version>
-		<sonar.version>3.9.1.2184</sonar.version>
-		<jacoco.version>0.8.9</jacoco.version>
+		<maven-compiler.version>3.12.1</maven-compiler.version>
+		<maven-source.version>3.3.0</maven-source.version>
+		<maven-surefire.version>3.2.5</maven-surefire.version>
+		<maven-gpg.version>3.1.0</maven-gpg.version>
+		<sonar.version>3.10.0.2594</sonar.version>
+		<jacoco.version>0.8.11</jacoco.version>
 
 		<!-- Sonar -->
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -164,25 +164,25 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.13.1</version>
+				<version>4.13.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
-				<version>2.15.1</version>
+				<version>2.16.1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.15.1</version>
+				<version>2.16.1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.module</groupId>
 				<artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
-				<version>2.15.1</version>
+				<version>2.16.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -340,6 +340,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire.version}</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 
 			<!-- Exclude log4j2 properties -->
